# VNNLIB-Standard

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  VNNLib EBNF  VNNLib_BNF.cf  VNNLib_Bnf.cf  VNNLib_LBNF.cf  VNNLib_bnf.cf  build_parser.sh  grammar.cf  syntax.cf  test.sh
VNNLIB2_standard/: examples.tex  main.tex  onnx_modelzoo_report.tex
agda/: .gitignore  VNNLib.agda
document/: bibliography.bib  main.bbl  main.tex  main.toc  onnx_modelzoo_report.tex  smtlib_property.tex  standard.tex  syntax.tex  verifier_interface.tex
parser/: Makefile
parser_cpp/: Makefile
parsers/: Makefile
parsers/python/: pyproject.toml  setup.py
parsers/python/test/: benchmark_parser.py  test_compat_transformer.py  test_congruence.py  test_dnf_conversion.py  test_linearize.py  test_scopecheck.py
parsers/python/vnnlib/: __init__.py  _core.cpp  _core.pyi
parsers/python/vnnlib/compat/: __init__.py
semantics/: .gitignore  VNNLib.agda  check-monads.agda  check.agda  context-isomorphism.agda  new.agda  syntax-utils.agda  tensor.agda  types-utils.agda  utils.agda  vnnlib-check-assertions.agda  vnnlib-check-declarations.agda  vnnlib-check.agda  vnnlib-scopecheck.agda  vnnlib-semantics.agda  vnnlib-syntax.agda  vnnlib-types.agda  vnnlib.agda-lib
syntax/: Makefile  grammar.cf
test/: .gitignore  2025-03-17-1742191652_error-files.txt  acc.vnnlib  cartpole.vnnlib  drones.vnnlib  dubinsrejoin.vnnlib  example_ACAS_XU_prop_1_multiple_networks.txt  example_multiple_networks-alt-mult.txt  example_multiple_networks-alt.txt  example_multiple_networks-orig-mult.txt  (+15 more)
(+105 files in other folders)
